# plotlyink

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  ChangeLog  LICENSE  Makefile  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/notes/: quickstart.rst
docs/src/: cli.rst
notebooks/: tutorial.ipynb
plotlyink/: __init__.py  cli.py  colors.py  config.py  core.py  finegrained.py  register_pandas_accessors.py  testing.py  utils.py
tests/: conftest.py  test_colors.py  test_scatter.py  test_testing.py  test_zlast_summarize.py
tests/data/figures/: pokemon_scatter_area_noargs.json  pokemon_scatter_lines_fill.json  pokemon_scatter_lines_noargs.json  pokemon_scatter_markers_lots_of_args.json  pokemon_scatter_markers_noargs.json  pokemon_scatter_markers_size.json
