[metadata]
name = plotlyink
author = See AUTHORS
author-email = ""
summary = Marying plotly & pandas
description-file = README.rst
home-page = https://github.com/gjeusel/plotlyink
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    License :: MIT license
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages = plotlyink

# add datafile to be included in your distribution packages here, ex:
#data-files =
#    data = data/*
#    frontend = frontend/dist/*

## CLI settings
#[entry_points]
#console_scripts =
#    plotlyink = plotlyink.cli:__main__

[build_sphinx]
project = plotlyink
source-dir = docs
build-dir = docs/build

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

[yapf]
allow_split_before_dict_value = false

[flake8]
exclude = */migrations/*,*/south_migrations/*
ignore = E501  # line too long

[isort]
line_length = 100

[tool:pytest]
pep8maxlinelength = 120
pep8ignore = E402 E123 E501 E131 E126 E128 W503
norecursedirs =
    .git
    .tox
    .env
    .eggs
    .cache
    dist
    build
    south_migrations
    migrations
    chunk_scripts
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    #-rxEfsw
    #-W error
    #--strict
    #--doctest-modules
    #--doctest-glob=\*.rst
    --tb=short
    --cov-report=term-missing
    --cov=plotlyink
    #--pep8
    #--flakes
